fix cors settings