@@ -16,6 +16,7 @@ import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 @EnableWebSecurity
@@ -38,29 +39,29 @@ public class SecurityConfiguration {
                 .authorizeHttpRequests(authorize -> authorize
                         .requestMatchers("/api/auth/**")
                         .permitAll()
-                        .requestMatchers(HttpMethod.POST,"/api/orders/{orderId}")
+                        .requestMatchers(HttpMethod.POST, "/api/orders/{orderId}")
                         .hasRole("ADMIN")
-                        .requestMatchers(HttpMethod.GET,"/api/orders")
+                        .requestMatchers(HttpMethod.GET, "/api/orders")
                         .hasRole("ADMIN")
-                        .requestMatchers(HttpMethod.GET,"/api/products/**")
+                        .requestMatchers(HttpMethod.GET, "/api/products/**")
                         .permitAll()
-                        .requestMatchers(HttpMethod.DELETE,"/api/products/user-review/**")
+                        .requestMatchers(HttpMethod.DELETE, "/api/products/user-review/**")
                         .hasRole("USER")
-                        .requestMatchers( HttpMethod.DELETE,"/api/products/**")
+                        .requestMatchers(HttpMethod.DELETE, "/api/products/**")
                         .hasRole("ADMIN")
-                        .requestMatchers(HttpMethod.POST,"/api/products/**")
+                        .requestMatchers(HttpMethod.POST, "/api/products/**")
                         .hasRole("ADMIN")
-                        .requestMatchers(HttpMethod.PUT,"/api/products/{productId}/*")
-                        .hasAnyRole("USER","ADMIN")
-                        .requestMatchers(HttpMethod.PUT,"/api/products/**")
+                        .requestMatchers(HttpMethod.PUT, "/api/products/{productId}/*")
+                        .hasAnyRole("USER", "ADMIN")
+                        .requestMatchers(HttpMethod.PUT, "/api/products/**")
                         .hasRole("ADMIN")
-                        .requestMatchers(HttpMethod.GET,"/api/products/*/reviews")
+                        .requestMatchers(HttpMethod.GET, "/api/products/*/reviews")
                         .permitAll()
-                        .requestMatchers(HttpMethod.PUT,"/api/carts/{id}")
+                        .requestMatchers(HttpMethod.PUT, "/api/carts/{id}")
                         .permitAll()
-                        .requestMatchers(HttpMethod.POST,"/api/carts/add-to-cart")
+                        .requestMatchers(HttpMethod.POST, "/api/carts/add-to-cart")
                         .permitAll()
-                        .requestMatchers(HttpMethod.GET,"/api/carts")
+                        .requestMatchers(HttpMethod.GET, "/api/carts")
                         .permitAll()
                         .anyRequest()
                         .authenticated())
@@ -78,9 +79,10 @@ public class SecurityConfiguration {
                 "http://127.0.0.1:3000",
                 "http://89.134.215.228:3000",
                 "https://ecommerce-frontend-henna-three.vercel.app"));
-        configuration.setAllowedMethods(Arrays.asList("GET","POST","PUT","DELETE","OPTIONS"));
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
         configuration.setAllowCredentials(true);
-        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Cache-Control", "Content-Type","Cookie"));
+        configuration.setAllowedHeaders(List.of("*"));
+        configuration.setMaxAge(3600L);
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
